@@ -248,13 +248,10 @@ int e_init(char *hdf)
 	diag(H_D2) { fprintf(diag_fd, "e_init(): platform.(row,col)	  = (%d,%d)\n", e_platform.row, e_platform.col); }
 	diag(H_D2) { fprintf(diag_fd, "e_init(): platform.(rows,cols) = (%d,%d)\n", e_platform.rows, e_platform.cols); }
 
-#if 0
-	/* TODO: FIXME: Provide backwards compatibility in driver */
 	if ( E_OK != e_shm_init() ) {
 		warnx("e_init(): Failed to initialize the Epiphany Shared Memory Manager.");
 		return E_ERR;
 	}
-#endif
 
 	e_platform.initialized = E_TRUE;
 
