@@ -1,3 +1,9 @@
+2016-02-16  Ola Jeppsson  <ola@adapteva.com>
+
+	* e-hal/src/epiphany-shm-manager.c (e_shm_init_native): Fill in
+	shm_alloc struct.
+	* e-hal/src/epiphany-hal.c (e_init): Call e_shm_init() again.
+
 2016-02-15  Ola Jeppsson  <ola@adapteva.com>
 
 	* bsps/parallella64/platform.hdf (ESYS_REGS_BASE): Remove.
